AM_CPPFLAGS = -I../../include -I../../ncs4pad/include -I../../ncs4pad/include/misc -I../../ncs4pad/include/physics-animation -I../../ncs4pad/include/pieces

noinst_PROGRAMS = \
    test-bitblt \
    test-container \
    test-eventhandler \
    test-transround \
    test-exseparator \
    test-container-nesting \
    test-textpiece \
    test-buttonpanel \
    test-animationedit \
    test-panel-update \
    test-iconflow \
    test-museritem \
    test-tableview \
    test-itempiece \
    test-widgethostpiece \
    test-autoscroll \
    test-autotable \
    test-myfilldc \
    test-gaussblur \
    test-mousemove \
    test-subdc \
    test-scrollview
#test-tslib
#test-listitemmanager
#test-groupitemmanager
#test-wrappaint
#test-tableviewitem

LDADD = ../../ncs4pad/src/libncs4pad.la ../../common/libcommon.la @DEP_LIBS@

test_bitblt_SOURCES = test-bitblt.c
test_container_SOURCES = test-container.c
test_eventhandler_SOURCES = test-eventhandler.c
test_transround_SOURCES = test-transround.c
test_exseparator_SOURCES = test-exseparator.c
test_container_nesting_SOURCES = test-container-nesting.c
test_textpiece_SOURCES = test-textpiece.c
test_buttonpanel_SOURCES = test-buttonpanel.c
test_animationedit_SOURCES = test-animationedit.c
test_panel_update_SOURCES = test-panel-update.c
test_iconflow_SOURCES = test-iconflow.c
test_museritem_SOURCES = test-museritem.c
test_tableview_SOURCES = test-tableview.c
test_itempiece_SOURCES = test-itempiece.c
test_widgethostpiece_SOURCES = test-widgethostpiece.c
test_autoscroll_SOURCES = test-autoscroll.c
test_autotable_SOURCES = test-autotable.c
test_myfilldc_SOURCES = test-myfilldc.c
test_gaussblur_SOURCES = test-gaussblur.c
test_mousemove_SOURCES = test-mousemove.c
test_subdc_SOURCES = test-subdc.c
test_scrollview_SOURCES = test-scrollview.c

DIST_SUBDIRS=res
