datadir = $(bindir)/res/address-book

data_DATA = \
    address_book_add.png \
    address_book_calllog.png \
    address_book_contacts.png \
    address_book_dial.png \
    address_book_photo.png \
    address_book_unknow.png \
    Makefile.am \
    photo01big.png \
    photo01.png \
    photo02big.png \
    photo02.png \
    photo03big.png \
    photo03.png \
    photo04big.png \
    photo04.png \
    photo05big.png \
    photo05.png \
    photo06big.png \
    photo06.png \
    photo07big.png \
    photo07.png \
    photo08big.png \
    photo08.png \
    photo09big.png \
    photo09.png \
    photo10big.png \
    photo10.png \
    photo11big.png \
    photo11.png \
    photo12big.png \
    photo12.png \
    photo13big.png \
    photo13.png \
    photo14big.png \
    photo14.png \
    photo15big.png \
    photo15.png

