datadir = $(bindir)/res/desktop

data_DATA = \
    backspace_hilight.png \
    backspace.png \
    calc_left.png \
    calc.png \
    calc_right.png \
    camera_left.png \
    camera.png \
    camera_right.png \
    contacts_left.png \
    contacts.png \
    contacts_right.png \
    date_left.png \
    date.png \
    date_right.png \
    dial_left.png \
    dial.png \
    dial_right.png \
    esc_hilight.png \
    esc.png \
    flight_left.png \
    flight.png \
    flight_right.png \
    games_left.png \
    games.png \
    games_right.png \
    internet_left.png \
    internet.png \
    internet_right.png \
    kb.jpg \
    kb.png \
    music_left.png \
    music.png \
    music_right.png \
    picture_left.png \
    picture.png \
    picture_right.png \
    settings_left.png \
    settings.png \
    settings_right.png \
    sms_left.png \
    sms.png \
    sms_right.png
