AUTOMAKE_OPTIONS = subdir-objects

AM_CPPFLAGS=../../apps/address-book

noinst_PROGRAMS = test-utils test-simple test-inertia

test_utils_SOURCES = \
    ../../ncs4pad/src/physics-animation/chipmunk-utils.c \
    ../../ncs4pad/src/physics-animation/mspeedmeter.c \
    test-framework.c \
    test-utils.c

test_simple_SOURCES = test-simple.c

test_inertia_SOURCES = \
    ../../ncs4pad/src/physics-animation/mspeedmeter.c \
    test-framework.c \
    test-inertia.c
